--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ awscli = "*"
 pandas = "*"
 scikit-learn = "==0.20.0"
 sagemaker-containers = "*"
+matplotlib = "*"
+seaborn = "*"
 
 [requires]
 python_version = "3.7"
