--- a/Pipfile
+++ b/Pipfile
@@ -6,16 +6,15 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-sklearn = "*"
 boto3 = "*"
 nltk = "*"
 ipykernel = "*"
 awscli = "*"
-pandas = "*"
+numpy = "==1.15.2"
+pandas = "==0.23.4"
 scikit-learn = "==0.20.0"
-sagemaker-containers = "*"
-matplotlib = "*"
-seaborn = "*"
+sagemaker = "==1.11.3"
+sagemaker-containers = "==2.2.4"
 
 [requires]
-python_version = "3.7"
+python_version = "3.5"
