--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ pandas = "==0.23.4"
 scikit-learn = "==0.20.0"
 sagemaker = "==1.11.3"
 sagemaker-containers = "==2.2.4"
+urllib3 = "==1.24.2"
 
 [requires]
 python_version = "3.5"
